--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/normalize.css">
     <link rel="stylesheet" href="./assets/style/style.css">
-    <title>Template Front </title>
+    <title>Clock</title>
 </head>
 
 <body>
     <!-- HEADER -->
-
 
     <!-- MAIN -->
     <div class="clock">
@@ -25,6 +24,7 @@
 
     <!-- FOOTER -->
 
+    <!-- SCRIPT -->
     <script src="./assets/script/script.js"></script>
 </body>
 
